Fix long file names wrapping in the image editor [#107209190]

--- a/app/assets/stylesheets/components/_image-upload.css.sass
+++ b/app/assets/stylesheets/components/_image-upload.css.sass
@@ -57,8 +57,10 @@
   .dz-error-mark
     display: none
 
-  .dz-filename
+  .dz-filename, .default-text
     text-overflow: ellipsis
     white-space: nowrap
-    width: 70%
     overflow: hidden
+
+  .dz-filename
+    width: 70%
